--- a/a3/css/style.css
+++ b/a3/css/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
 body {
   text-align: center;
 }
@@ -132,8 +136,9 @@ body {
 }
 
 #indicator {
-  border: 2px solid black;
-  border-radius: 5px;
+  border: none;
+  border-bottom: 2px solid black;
+  border-radius: 0px;
   font-size: 22px;
   cursor:pointer;
   background: url(https://raw.githubusercontent.com/svickars/major-studio-1/master/a3/select-down.png) no-repeat right;
@@ -141,19 +146,20 @@ body {
   /*background-position-y: 65%;*/
   margin-right: 5px;
   -webkit-appearance: none;  /*REMOVES DEFAULT CHROME & SAFARI STYLE*/
- -moz-appearance: none;  /*REMOVES DEFAULT FIREFOX STYLE*/
+  -moz-appearance: none;  /*REMOVES DEFAULT FIREFOX STYLE*/
 }
 
 #region {
-  border: 2px solid black;
-  border-radius: 5px;
+  border: none;
+  border-bottom: 2px solid black;
+  border-radius: 0px;
   font-size: 22px;
   cursor:pointer;
   background: url(https://raw.githubusercontent.com/svickars/major-studio-1/master/a3/select-down.png) no-repeat right;
   background-size: 16px;
   margin-right: 10px;
   -webkit-appearance: none;  /*REMOVES DEFAULT CHROME & SAFARI STYLE*/
- -moz-appearance: none;  /*REMOVES DEFAULT FIREFOX STYLE*/
+  -moz-appearance: none;  /*REMOVES DEFAULT FIREFOX STYLE*/
 }
 
 .graph-title {
@@ -211,13 +217,18 @@ body {
 	background: rgba(0,0,0,0.8);
 }
 
+.lbOut {
+  width: 1100;
+  overflow: hidden;
+}
+
 .lbIn {
   padding-top: 10px;
   font-family: 'Roboto', sans-serif;
   display: none;
   position: fixed;
   z-index: 998;
-  width: 1100px;
+  width: 1108px;
   height: 750px;
   border-radius: 3px;
   background: white;
@@ -226,7 +237,14 @@ body {
   top: 10%;
   /*margin-top: -250px;*/
   text-align: center;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 
 .lbtitle{
   font-family: "Roboto", sans-serif;
@@ -707,4 +725,8 @@ select:focus {
 
 .sRead a:hover {
   text-decoration: underline;
+}
+
+.rightLabels, #chart1labels, #chart4labels {
+  font-size: 8px;
 }
