--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -2,7 +2,7 @@
 /*-----THE BASICS-----*/
 html {
     overflow-y: scroll;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     background-color: white;
 }
 
@@ -37,6 +37,39 @@ select:focus {
 }
 
 
+
+/*---------------------*/
+/*-----THE BUTTONS-----*/
+.subtitle {
+    font-family: Arial, sans-serif;
+    font-size: 11px;
+    margin-top: 15px;
+    margin-bottom: 2px;
+    transform: translate(-1.6%);
+}
+
+.b {
+    text-transform: uppercase;
+    font-size: 8px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 2px 3px;
+    border: 1px solid black;
+    border-radius: 3px;
+    cursor: help;
+}
+
+.b:hover {
+    background: black;
+    color: white;
+}
+
+.bComp {
+    margin-right: 10px;
+}
+
+
+
 /*--------------------*/
 /*-----THE LAYOUT-----*/
 #svgAxes {
@@ -47,18 +80,68 @@ select:focus {
 
 .colscroll {
     /*position: relative;*/
-    overflow-x: scroll;
+    /*overflow-x: scroll;*/
 }
 
 .colnoscroll {
     /*position: relative;*/
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 /*#overlay {*/
 /*    position: absolute;*/
     /*transform: translate(0, -820px);*/
 /*}*/
+
+.info {
+    transform: translate(0, -900px);
+}
+
+
+
+/*---------------------*/
+/*-----THE COUNTRY-----*/
+.info {
+    font-family: Arial, sans-erif;
+}
+
+.left {
+    text-align: left;
+}
+
+.iTitle {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.iOverview {
+    font-size: 10px;
+}
+
+.iDeets {
+    font-size: 10px;
+}
+
+.jayz {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.top{
+    display: block;
+}
+
+.bottom{
+    display: block;
+}
+
+.iMore {
+    margin-top: 7px;
+    font-size: 8px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
 
 
 /*---------------------*/
@@ -69,6 +152,7 @@ select:focus {
     margin-top: 1rem;
     font-family: Arial, sans-serif;
     font-size: 22px;
+    transform: translate(-1.6%);
 }
 
 .graph-div-filter div {
@@ -117,6 +201,12 @@ path {
     fill: none;
 }
 
+.pathA {
+    stroke: black;
+    stroke-width: 1px;
+    visibility: hidden;
+}
+
 /*--tooltips--*/
 .tooltipMain {
     font-family: Arial, sans-serif;
@@ -159,6 +249,15 @@ path {
     text-transform: uppercase;
     cursor: default;
 }
+#labelA {
+    font-size: 8px;
+    font-family: Arial, sans-serif;
+    /*opacity: .3;*/
+    letter-spacing: 0;
+    text-transform: uppercase;
+    cursor: default;
+    visibility: hidden;
+}
 #labelD {
     font-size: 8px;
     font-family: Arial, sans-serif;
@@ -184,6 +283,16 @@ path {
     letter-spacing: 2px;
     transform: rotate(-90deg);
 }
+.hLabel {
+    position: absolute;
+    /*left: -30px;*/
+    font-family: Arial, sans-serif;
+    font-size: 9px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transform: translate(-50%, 0);
+    margin-left: -4px;
+}
 
 /*--axes--*/
 .axis path, .axis line {
@@ -194,8 +303,8 @@ path {
 .xAxis path {
     /*display: none;*/
     transform: translate(0,-225px);
+    stroke-width: 2px;
 }
-
 
 .axis text {
     font-family: Arial, sans-serif;
@@ -250,4 +359,14 @@ path {
 .glyphVert {
     transform: rotate(-90deg);
     margin-left: -1px;
+}
+
+.footnote {
+  margin-top: 5px;
+  opacity: .7;
+  font-size: 7px;
+  text-align: left;
+  padding-bottom: 7px;
+  text-transform: none;
+  letter-spacing: 0;
 }
