--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -2,7 +2,7 @@
 /*-----THE BASICS-----*/
 html {
     overflow-y: scroll;
-    /*overflow-x: hidden;*/
+    overflow-x: visible;
     background-color: white;
 }
 
@@ -105,8 +105,6 @@ select:focus {
 #svgAxes {
     /*visibility: hidden;*/
 }
-
-
 
 .colscroll {
     /*position: relative;*/
